# TopicVisExplorer

./: #LdaVis - Visualize topic modeling results.ipynb  (borrar) hoja en blanco.ipynb  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PAPER_REPRO.md  PLAN.md  README.md  ROADMAP.md  SCRUB_REPORT.md  Test and Load only topicvisexplorer visualization.ipynb  __init__.py  _display.py  _get_new_circle_positions.py  _guidedLda_helpers.py  _prepare.py  _prepare_single_topic.py  _prepare_vis.py  _topic_similarity_matrix.py  _topic_similarity_matrix_metric_baseline.py  _topic_splitting_helpers.py  app.py  borrar - probando pickle user study.ipynb  borrar .py.ipynb  borrar pronto rescatar metrica baseline y otros quizas.py  borrar.py  classinclass.py  codes_with_errors.txt  deleted_from_server.txt  desktop.ini  environment-test.yml  gensim_helpers.py  gensim_utils.py  json_file_topic_splitting.json  json_file_topic_splitting_test.json  ldavis.html  max_users_reached.txt  (+20 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  legacy-smoke.yml
.ipynb_checkpoints/: #LdaVis - Visualize topic modeling results-checkpoint.ipynb  (borrar) hoja en blanco-checkpoint.ipynb  Compare two topic modeling output - Different topic similarity metrics-checkpoint.ipynb  Fingerprinting relevant documents-checkpoint.ipynb  Prepared data for visualization - Testing jupyter-checkpoint.ipynb  TopicModeling - create elements and save it-checkpoint.ipynb
Airline tweets/downloaded_json/: crawled_data_19.pickle  crawled_data_2927.pickle
Twitter_pyLDAvis/: Compare two topic modeling output - Different topic similarity metrics.ipynb  Test - Create 'PreparedData - mdsData' - After Merge.ipynb  _display.py  _prepare.py  app.py  app2.py  calculate_topic_similarity.py  merge_topics.py  urls.py
Twitter_pyLDAvis/.ipynb_checkpoints/: Compare two topic modeling output - Different topic similarity metrics-checkpoint.ipynb  Test - Create 'PreparedData - mdsData' - After Merge-checkpoint.ipynb
Twitter_pyLDAvis/static/: data_test.json
Twitter_pyLDAvis/templates/: index.html
crosslingual-visualization/: TopicSimilarityMetric.ipynb  app.py  init.py  prepare.py
crosslingual-visualization/.ipynb_checkpoints/: TopicSimilarityMetric-checkpoint.ipynb
crosslingual-visualization/data/: tutorial_ldamodel.id2word
crosslingual-visualization/static/: crosslingual.js  old.css  old.js  style.css
crosslingual-visualization/templates/: index.html
data/cambridge_analytica/: matrix_collection_1_1  matrix_collection_1_2
docs/: RELEASING.md  coherence.md  custom_corpus_tutorial.md  edit-ops.md  extending.md  index.md  installation-and-testing.md  migration.md  own_data.md  quickstart.md  roadmap.md  tutorial.md  user_study.md
docs/reference/: coherence.md  index.md  models.md  operations.md  prepare.md  (+1 more)
examples/: 00_end_to_end.ipynb  01_prepare_single_corpus.py  02_byo_csv_show.py  03_two_corpora_sankey.py  04_bundled_single_demo.py  05_huggingface_demo.py  06_bertopic_show.py  07_single_and_multicorpus.ipynb  README.md  byo_minimal.jsonl  end_to_end_output.html  prep_politics.npz  prep_science.npz  sample_corpus.csv  sample_corpus.json
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
golden_baseline/: README.md  baseline_bench.json  tiny_edit_ops.json  tiny_manifest.json  tiny_prepare_output.json  tiny_similarity_matrix.json
jupyters/: BORRAR.ipynb  Create collection I and collection II.ipynb  PYLDAVIS - test.ipynb  Procrustes.ipynb  Proposed topic similarity metric (quizas borrar, es el prototipo de la metrica).ipynb  Proposed topic similarity metric- (final topic similarity metric).ipynb  Proposed topic similarity metric.ipynb  Recover Matrix documents topic distribution - Get input most relevant documents for topic vis explorer.ipynb  Recover Matrix documents topic distribution.ipynb  Topic Modelling - English dataset (Collection I and II).ipynb  Topic Modelling - English dataset (North America - Europe EPJ).ipynb  Untitled.ipynb  [CSCW] Automatic topic models comparison - Different topic similarity metrics.ipynb  [TopicVisExplorer - Test] Proposed topic similarity metric- (final topic similarity metric)-Copy1.ipynb  [TopicVisExplorer] Compare two topic modeling output - Different topic similarity metrics.ipynb  [TopicVisExplorer] Create word embedding with user study data.ipynb  _prepare.py  borrar.ipynb  borrar_ matriz de distancia.ipynb  borrar_review_delete.csv  collection_1_sent_topics_sorteddf_mallet_ldamodel  new_circle_positions.json  new_circle_positions.pkl  pcoa - topic similarity metric proposed-Copy1.ipynb  pcoa - topic similarity metric proposed.ipynb  standardized_matrix.pkl
notebooks/: Topic-Modeling-EstoPasaEnChile-Obtener-tweets-mas-relevantes-Informacion-agregada.ipynb  Topic_Modeling_num_topics_2_2019_10_27_21_38.csv
official_notebooks/: [User study]  - Reduce number of topics - Multicorpora - A topic model for the Cambridge Analytica  - Europe - Northamerica - Mallet and LDA Gensim-Copy1.ipynb  [User study]  Airlines dataset - scenario 1.ipynb  [User study]  Airlines dataset - scenario 2.ipynb  [User study] Calculate best number of topics - Scenario 1 - Europe dataset.ipynb  [User study] Calculate topic coherence after splitting and merge.ipynb  [User study] Multicorpora - A topic model for the Cambridge Analytica  - Europe - Northamerica - Mallet and LDA Gensim.ipynb  [User study] Single corpus - A topic model for the Cambridge Analytica - Europe - Mallet and LDA Gensim.ipynb  borrar.ipynb
scripts/: build_20ng_tiny_fixtures.py  build_bbc_tiny_fixtures.py  capture_edit_op_golden.py
static/: crosslingual.js  crosslingual_respaldo.js  crosslingual_respaldo2.js  data_prueba.csv  old.js  style.css
templates/: index.html  user_study_code.html
tests/: conftest.py
todo-flask/: CropsFull.csv  Losses.csv  app.py  application.py
tutorials/: A topic model for the Twenty Newsgroups data - LDA Mallet and Gensim.ipynb
(+204 files in other folders)
